--- a/contactcenter.html
+++ b/contactcenter.html
@@ -10,8 +10,8 @@
   <nav class="ops-nav">
     <span class="ops-logo">OPS</span>
     <div class="nav-links">
+      <a href="index.html" class="nav-link">Home</a>
       <a href="business.html" class="nav-link">Business Operations</a>
-      <a href="contactcenter.html" class="nav-link active">Contact Center</a>
       <a href="itsupport.html" class="nav-link">IT Support</a>
       <a href="professionals.html" class="nav-link">Professionals</a>
     </div>
