--- a/business.html
+++ b/business.html
@@ -10,7 +10,7 @@
   <nav class="ops-nav">
     <span class="ops-logo">OPS</span>
     <div class="nav-links">
-      <a href="business.html" class="nav-link active">Business Operations</a>
+      <a href="index.html" class="nav-link">Home</a>
       <a href="contactcenter.html" class="nav-link">Contact Center</a>
       <a href="itsupport.html" class="nav-link">IT Support</a>
       <a href="professionals.html" class="nav-link">Professionals</a>
