--- a/professionals.html
+++ b/professionals.html
@@ -10,11 +10,11 @@
   <nav class="ops-nav">
     <span class="ops-logo">OPS</span>
     <div class="nav-links">
+      <a href="index.html" class="nav-link">Home</a>
       <a href="business.html" class="nav-link">Business Operations</a>
       <a href="contactcenter.html" class="nav-link">Contact Center</a>
       <a href="itsupport.html" class="nav-link">IT Support</a>
-      <a href="professionals.html" class="nav-link active">Professionals</a>
-    </div>
+     </div>
     <div class="toggles">
       <button class="toggle-btn" id="lang-toggle">ES</button>
       <button class="toggle-btn" id="theme-toggle">Dark</button>
