--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <a href="professionals.html" class="nav-link" data-lang-en="Professionals" data-lang-es="Profesionales">Professionals</a>
     </div>
     <div class="toggles">
-      <button class="toggle-btn" id="lang-toggle">ES</button>
+      <button class="toggle-btn" id="lang-toggle">EN</button>
       <button class="toggle-btn" id="theme-toggle">Dark</button>
     </div>
   </nav>
