--- a/itsupport.html
+++ b/itsupport.html
@@ -16,9 +16,10 @@
       <a href="professionals.html" class="nav-link">Professionals</a>
     </div>
     <div class="toggles">
-      <button class="toggle-btn" id="lang-toggle">ES</button>
+      <button class="toggle-btn" id="lang-toggle">EN</button>
       <button class="toggle-btn" id="theme-toggle">Dark</button>
     </div>
+  </nav>
   </nav>
   <main style="max-width:680px; margin:3em auto;">
     <h1 style="text-transform:uppercase;">IT Support</h1>
