--- a/professionals.html
+++ b/professionals.html
@@ -15,8 +15,8 @@
       <a href="contactcenter.html" class="nav-link">Contact Center</a>
       <a href="itsupport.html" class="nav-link">IT Support</a>
      </div>
-    <div class="toggles">
-      <button class="toggle-btn" id="lang-toggle">ES</button>
+   <div class="toggles">
+      <button class="toggle-btn" id="lang-toggle">EN</button>
       <button class="toggle-btn" id="theme-toggle">Dark</button>
     </div>
   </nav>
