Add FAB and Font Awesome styles

--- a/contactcenter.html
+++ b/contactcenter.html
@@ -5,6 +5,8 @@
   <title>Contact Center • OPS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="global.css">
+  <link rel="stylesheet" href="fabs.css">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v6.0.0-beta1/css/all.css">
 </head>
 <body>
   <nav class="ops-nav">
