--- a/business.html
+++ b/business.html
@@ -20,7 +20,6 @@
       <button class="toggle-btn" id="theme-toggle">Dark</button>
     </div>
   </nav>
-  </nav>
   <main style="max-width:700px; margin:3em auto;">
     <h1 style="text-transform:uppercase;">Business Operations</h1>
     <img src="https://via.placeholder.com/700x300" alt="Image placeholder" style="width:100%; height:auto;">
@@ -51,8 +50,8 @@
   </main>
   <div id="fab-root"></div>
   <footer>© 2025 OPS Online Support</footer>
-  <script src="main.js"></script>
-  <script src="connector.js"></script>
-  <script src="fabmain.js"></script>
+  <script type="module" src="main.js"></script>
+  <script type="module" src="connector.js"></script>
+  <script type="module" src="fabmain.js"></script>
 </body>
 </html>
