--- a/contactcenter.html
+++ b/contactcenter.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="global.css">
   <link rel="stylesheet" href="fabs.css">
+  <link rel="stylesheet" href="bot.css">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v6.0.0-beta1/css/all.css">
 </head>
 <body>
