Fix chatbot markup and load central script

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     © 2025 OPS Online Support
   </footer>
   <script type="module" src="connector.js"></script>
+  <script type="module" src="central.js"></script>
   <script type="module" src="main.js"></script>
   <script type="module" src="fabmain.js"></script>
 </body>
