--- a/business.html
+++ b/business.html
@@ -54,6 +54,7 @@
   <footer>© 2025 OPS Online Support</footer>
   <script type="module" src="main.js"></script>
   <script type="module" src="connector.js"></script>
+  <script type="module" src="central.js"></script>
   <script type="module" src="fabmain.js"></script>
 </body>
 </html>
