Add cancel button to contact footer and handle cancel

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -208,6 +208,7 @@
     <div class="modal-footer">
       <button type="submit" form="contact-form" class="submit-button"
               data-en="Send" data-es="Enviar">Send</button>
+      <button id="cancel-btn" class="submit-button" type="button">Cancel</button>
     </div>
 
   </div>
