--- a/contact.html
+++ b/contact.html
@@ -208,6 +208,8 @@
     <div class="modal-footer">
       <button type="submit" form="contact-form" class="submit-button"
               data-en="Send" data-es="Enviar">Send</button>
+      <button type="button" id="cancel-btn" class="submit-button"
+              data-en="Cancel" data-es="Cancelar">Cancel</button>
     </div>
 
   </div>
