Add meta descriptions and SEO tags

--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="Contact form modal for reaching the OPS team."
+  <meta name="robots" content="index,follow">
+  <link rel="canonical" href="contact.html">
   <title>Contact Modal</title>
   <style>
     /* === Modal Base === */
