--- a/business.html
+++ b/business.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <title>Business Operations • OPS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Overview of OPS business operations services and resources."
+  <meta name="robots" content="index,follow">
+  <link rel="canonical" href="business.html">
   <link rel="stylesheet" href="global.css">
   <link rel="stylesheet" href="fabs.css">
   <link rel="stylesheet" href="bot.css">
