--- a/contactcenter.html
+++ b/contactcenter.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <title>Contact Center • OPS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Information about OPS contact center solutions and best practices."
+  <meta name="robots" content="index,follow">
+  <link rel="canonical" href="contactcenter.html">
   <link rel="stylesheet" href="global.css">
   <link rel="stylesheet" href="fabs.css">
   <link rel="stylesheet" href="bot.css">
