--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <title>OPS Online Support • Structure Prototype</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Homepage of OPS Online Support providing quick access to business operations, contact center, IT support and professionals."
+  <meta name="robots" content="index,follow">
+  <link rel="canonical" href="index.html">
   <link rel="stylesheet" href="global.css">
   <link rel="stylesheet" href="fabs.css">
   <link rel="stylesheet" href="bot.css">
