--- a/itsupport.html
+++ b/itsupport.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <title>IT Support • OPS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Details on OPS IT support offerings and technical assistance."
+  <meta name="robots" content="index,follow">
+  <link rel="canonical" href="itsupport.html">
   <link rel="stylesheet" href="global.css">
   <link rel="stylesheet" href="fabs.css">
   <link rel="stylesheet" href="bot.css">
