--- a/join.html
+++ b/join.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <title>Join OPS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Join OPS to access services and support."
+  <meta name="robots" content="index,follow">
+  <link rel="canonical" href="join.html">
   <link rel="stylesheet" href="global.css">
   <link rel="stylesheet" href="fabs.css">
 </head>
