--- a/professionals.html
+++ b/professionals.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <title>Professionals • OPS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Resources for OPS professionals and consultants."
+  <meta name="robots" content="index,follow">
+  <link rel="canonical" href="professionals.html">
   <link rel="stylesheet" href="global.css">
   <link rel="stylesheet" href="fabs.css">
   <link rel="stylesheet" href="bot.css">
