Move language and theme toggles to central

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <nav class="ops-nav">
     <span class="ops-logo">OPS</span>
     <div class="nav-links">
-      <a href="business.html" class="nav-link" data-lang-en="Business Operations" data-lang-es="Operaciones de Negocio">Business Operations</a>
-      <a href="contactcenter.html" class="nav-link" data-lang-en="Contact Center" data-lang-es="Centro de Contacto">Contact Center</a>
-      <a href="itsupport.html" class="nav-link" data-lang-en="IT Support" data-lang-es="Soporte de TI">IT Support</a>
-      <a href="professionals.html" class="nav-link" data-lang-en="Professionals" data-lang-es="Profesionales">Professionals</a>
+      <a href="business.html" class="nav-link" data-en="Business Operations" data-es="Operaciones de Negocio">Business Operations</a>
+      <a href="contactcenter.html" class="nav-link" data-en="Contact Center" data-es="Centro de Contacto">Contact Center</a>
+      <a href="itsupport.html" class="nav-link" data-en="IT Support" data-es="Soporte de TI">IT Support</a>
+      <a href="professionals.html" class="nav-link" data-en="Professionals" data-es="Profesionales">Professionals</a>
     </div>
     <div class="toggles">
       <button class="toggle-btn" id="lang-toggle">EN</button>
@@ -30,31 +30,31 @@
   <main>
     <div class="grid-container">
       <div class="card" id="card-business">
-        <div class="title" data-lang-en="Business Operations" data-lang-es="Operaciones de Negocio">Business Operations</div>
+        <div class="title" data-en="Business Operations" data-es="Operaciones de Negocio">Business Operations</div>
         <div class="icon"><i class="fa-thin fa-briefcase"></i></div>
         <div class="content">
-          <p data-lang-en="Streamline your processes, maximize efficiency, ensure compliance, and scale your business with precision." data-lang-es="Optimice sus procesos, maximice la eficiencia, garantice el cumplimiento y escale su negocio con precisión.">Streamline your processes, maximize efficiency, ensure compliance, and scale your business with precision.</p>
+          <p data-en="Streamline your processes, maximize efficiency, ensure compliance, and scale your business with precision." data-es="Optimice sus procesos, maximice la eficiencia, garantice el cumplimiento y escale su negocio con precisión.">Streamline your processes, maximize efficiency, ensure compliance, and scale your business with precision.</p>
         </div>
       </div>
       <div class="card" id="card-contactcenter">
-        <div class="title" data-lang-en="Contact Center" data-lang-es="Centro de Contacto">Contact Center</div>
+        <div class="title" data-en="Contact Center" data-es="Centro de Contacto">Contact Center</div>
         <div class="icon"><i class="fa-thin fa-headset"></i></div>
         <div class="content">
-          <p data-lang-en="Enhance customer engagement with multilingual, multichannel support—24/7, data-driven, and empathetic." data-lang-es="Mejore la participación del cliente con soporte multilingüe y multicanal: 24/7, basado en datos y empático.">Enhance customer engagement with multilingual, multichannel support—24/7, data-driven, and empathetic.</p>
+          <p data-en="Enhance customer engagement with multilingual, multichannel support—24/7, data-driven, and empathetic." data-es="Mejore la participación del cliente con soporte multilingüe y multicanal: 24/7, basado en datos y empático.">Enhance customer engagement with multilingual, multichannel support—24/7, data-driven, and empathetic.</p>
         </div>
       </div>
       <div class="card" id="card-itsupport">
-        <div class="title" data-lang-en="IT Support" data-lang-es="Soporte de TI">IT Support</div>
+        <div class="title" data-en="IT Support" data-es="Soporte de TI">IT Support</div>
         <div class="icon"><i class="fa-thin fa-laptop-code"></i></div>
         <div class="content">
-          <p data-lang-en="Proactive, secure, real-time tech help, cloud management, and cyber defense for every business size." data-lang-es="Ayuda técnica proactiva, segura y en tiempo real, gestión de la nube y ciberdefensa para empresas de todos los tamaños.">Proactive, secure, real-time tech help, cloud management, and cyber defense for every business size.</p>
+          <p data-en="Proactive, secure, real-time tech help, cloud management, and cyber defense for every business size." data-es="Ayuda técnica proactiva, segura y en tiempo real, gestión de la nube y ciberdefensa para empresas de todos los tamaños.">Proactive, secure, real-time tech help, cloud management, and cyber defense for every business size.</p>
         </div>
       </div>
       <div class="card" id="card-professionals">
-        <div class="title" data-lang-en="Professionals" data-lang-es="Profesionales">Professionals</div>
+        <div class="title" data-en="Professionals" data-es="Profesionales">Professionals</div>
         <div class="icon"><i class="fa-thin fa-user-tie"></i></div>
         <div class="content">
-          <p data-lang-en="OPS-vetted talent for IT, HR, projects, finance—contract or full-time, ready when you are." data-lang-es="Talento investigado por OPS para TI, recursos humanos, proyectos, finanzas, por contrato o a tiempo completo, listo cuando usted lo esté.">OPS-vetted talent for IT, HR, projects, finance—contract or full-time, ready when you are.</p>
+          <p data-en="OPS-vetted talent for IT, HR, projects, finance—contract or full-time, ready when you are." data-es="Talento investigado por OPS para TI, recursos humanos, proyectos, finanzas, por contrato o a tiempo completo, listo cuando usted lo esté.">OPS-vetted talent for IT, HR, projects, finance—contract or full-time, ready when you are.</p>
         </div>
       </div>
     </div>
