--- a/join.html
+++ b/join.html
@@ -10,7 +10,7 @@
   <body>
     <script type="module">
       import { openModal } from './connector.js';
-      window.addEventListener('DOMContentLoaded', () => openModal('join'));
+      window.addEventListener('DOMContentLoaded', () => openModal('join-modal'));
     </script>
     <div id="fab-root"></div>
     <script type="module" src="fabmain.js"></script>
