Add join modal and update links

--- a/business.html
+++ b/business.html
@@ -48,7 +48,7 @@
     </p>
     <div class="modal-actions" style="margin-top:2.2em;">
       <button class="modal-btn cta" onclick="openModal('contact', true)">Contact Us</button>
-      <a href="join.html" class="modal-btn">Join Us</a>
+      <a href="join.html" class="modal-btn" onclick="openModal('join-modal', true); return false;">Join Us</a>
     </div>
   </main>
   <div id="fab-root"></div>
