--- a/fabs.html
+++ b/fabs.html
@@ -15,7 +15,7 @@
     <a href="itsupport.html">IT Support</a>
     <a href="professionals.html">Professionals</a>
     <button id="mobile-fab-home"><i class="fa-thin fa-home"></i> Home</button>
-      <button class="toggle-btn" id="lang-toggle">EN</button>
+      <button class="toggle-btn" id="mobile-lang-toggle">EN</button>
     <button id="mobile-theme-toggle">Dark</button>
   </div>
 </div>
