Add SEO meta tags, CSP, and ARIA roles

--- a/fabs.html
+++ b/fabs.html
@@ -1,21 +1,21 @@
 <!-- fabs.html -->
 <div class="fab-stack" id="desktop-fab-stack">
-  <button class="fab-btn" id="fab-join" title="Join Us"><i class="fa-thin fa-user-plus"></i><span>Join</span></button>
-  <button class="fab-btn" id="fab-contact" title="Contact Us"><i class="fa-thin fa-envelope"></i><span>Contact</span></button>
-  <button class="fab-btn" id="fab-chat" title="Chatbot"><i class="fa-thin fa-comment-alt"></i><span>Chat</span></button>
+  <button role="button" class="fab-btn" id="fab-join" title="Join Us"><i class="fa-thin fa-user-plus"></i><span>Join</span></button>
+  <button role="button" class="fab-btn" id="fab-contact" title="Contact Us"><i class="fa-thin fa-envelope"></i><span>Contact</span></button>
+  <button role="button" class="fab-btn" id="fab-chat" title="Chatbot"><i class="fa-thin fa-comment-alt"></i><span>Chat</span></button>
 </div>
 <div class="mobile-accordion-nav" id="mobile-accordion-nav">
-  <button class="mobile-accordion-btn" id="mobile-fab-join" title="Join Us"><i class="fa-thin fa-user-plus"></i></button>
-  <button class="mobile-accordion-btn" id="mobile-fab-contact" title="Contact Us"><i class="fa-thin fa-envelope"></i></button>
-  <button class="mobile-accordion-btn" id="mobile-fab-chat" title="Chatbot"><i class="fa-thin fa-comment-alt"></i></button>
-  <button class="mobile-accordion-btn" id="mobile-fab-services" title="Services"><i class="fa-thin fa-cogs"></i></button>
+  <button role="button" class="mobile-accordion-btn" id="mobile-fab-join" title="Join Us"><i class="fa-thin fa-user-plus"></i></button>
+  <button role="button" class="mobile-accordion-btn" id="mobile-fab-contact" title="Contact Us"><i class="fa-thin fa-envelope"></i></button>
+  <button role="button" class="mobile-accordion-btn" id="mobile-fab-chat" title="Chatbot"><i class="fa-thin fa-comment-alt"></i></button>
+  <button role="button" class="mobile-accordion-btn" id="mobile-fab-services" title="Services"><i class="fa-thin fa-cogs"></i></button>
   <div class="accordion-panel" id="mobile-panel-services">
     <a href="business.html">Business Operations</a>
     <a href="contactcenter.html">Contact Center</a>
     <a href="itsupport.html">IT Support</a>
     <a href="professionals.html">Professionals</a>
-    <button id="mobile-fab-home"><i class="fa-thin fa-home"></i> Home</button>
-      <button class="toggle-btn" id="lang-toggle">EN</button>
-    <button id="mobile-theme-toggle">Dark</button>
+    <button role="button" id="mobile-fab-home"><i class="fa-thin fa-home"></i> Home</button>
+      <button role="button" class="toggle-btn" id="lang-toggle">EN</button>
+    <button role="button" id="mobile-theme-toggle">Dark</button>
   </div>
 </div>
