--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Contact Modal</title>
+  <meta name="description" content="Contact form modal for OPS">
+  <meta name="robots" content="index, follow">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' unsafe-inline; style-src 'self' unsafe-inline;">
   <style>
     /* === Modal Base === */
     .modal-overlay {
@@ -119,12 +122,12 @@
     <!-- Modal Header -->
     <div class="modal-header">
       <h3 id="contactModalTitle" data-en="Contact Us" data-es="Contáctenos">Contact Us</h3>
-      <button class="close-modal" data-close aria-label="Close">&times;</button>
+      <button role="button" class="close-modal" data-close aria-label="Close">&times;</button>
     </div>
 
     <!-- Modal Body -->
     <div class="modal-body">
-      <form id="contact-form">
+      <form role="form" id="contact-form">
 
         <!-- Name & Email -->
         <div class="form-row">
@@ -205,9 +208,9 @@
 
     <!-- Modal Footer -->
     <div class="modal-footer">
-      <button type="submit" form="contact-form" class="submit-button"
+      <button role="button" type="submit" form="contact-form" class="submit-button"
               data-en="Send" data-es="Enviar">Send</button>
-      <button type="button" id="cancel-btn" class="submit-button"
+      <button role="button" type="button" id="cancel-btn" class="submit-button"
               data-en="Cancel" data-es="Cancelar">Cancel</button>
     </div>
   </div>
