--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <title>OPS Online Support • Structure Prototype</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="OPS Online Support structure prototype and navigation">
+  <meta name="robots" content="index, follow">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' unsafe-inline; style-src 'self' unsafe-inline;">
   <link rel="stylesheet" href="global.css">
   <link rel="stylesheet" href="fabs.css">
   <link rel="stylesheet" href="bot.css">
@@ -21,8 +24,8 @@
       <a href="professionals.html" class="nav-link" data-lang-en="Professionals" data-lang-es="Profesionales">Professionals</a>
     </div>
     <div class="toggles">
-      <button class="toggle-btn" id="lang-toggle">EN</button>
-      <button class="toggle-btn" id="theme-toggle">Dark</button>
+      <button role="button" class="toggle-btn" id="lang-toggle">EN</button>
+      <button role="button" class="toggle-btn" id="theme-toggle">Dark</button>
     </div>
   </nav>
 
