--- a/business-modal.html
+++ b/business-modal.html
@@ -3,7 +3,7 @@
   <div class="modal-header">
     <h3 data-en="Business Operations" data-es="Operaciones de Negocio">Business Operations</h3>
   </div>
-  <div class="modal-body">
+  <div class="modal-body centered">
   <img src="https://via.placeholder.com/700x300" alt="Image placeholder" style="width:100%; height:auto;">
   <p>
     Optimize, secure, and scale your core processes with OPS Business Operations.<br>
