--- a/business.html
+++ b/business.html
@@ -26,7 +26,7 @@
       <button role="button" class="toggle-btn" id="theme-toggle">Dark</button>
     </div>
   </nav>
-  <main style="max-width:700px; margin:3em auto;">
+  <main class="centered" style="max-width:700px; margin:3em auto;">
     <h1 style="text-transform:uppercase;">Business Operations</h1>
     <img src="https://via.placeholder.com/700x300" alt="Image placeholder" style="width:100%; height:auto;">
     <p>
