--- a/contactcenter-modal.html
+++ b/contactcenter-modal.html
@@ -3,7 +3,7 @@
   <div class="modal-header">
     <h3 data-en="Contact Center" data-es="Centro de Contacto">Contact Center</h3>
   </div>
-  <div class="modal-body">
+  <div class="modal-body centered">
     <img src="https://via.placeholder.com/700x300" alt="Image placeholder" style="width:100%; height:auto;">
     <p>
         Enhance customer engagement with our comprehensive Contact Center solutions.
