--- a/itsupport-modal.html
+++ b/itsupport-modal.html
@@ -3,7 +3,7 @@
   <div class="modal-header">
     <h3 data-en="IT Support" data-es="Soporte de TI">IT Support</h3>
   </div>
-  <div class="modal-body">
+  <div class="modal-body centered">
     <img src="https://via.placeholder.com/700x300" alt="Image placeholder" style="width:100%; height:auto;">
     <p>
         Reliable and timely IT support to keep your systems running smoothly.
