--- a/professionals-modal.html
+++ b/professionals-modal.html
@@ -3,7 +3,7 @@
   <div class="modal-header">
     <h3 data-en="Professionals" data-es="Profesionales">Professionals</h3>
   </div>
-  <div class="modal-body">
+  <div class="modal-body centered">
     <img src="https://via.placeholder.com/700x300" alt="Image placeholder" style="width:100%; height:auto;">
     <p>
         Access our network of highly skilled and experienced professionals.
