Fix modal behavior

--- a/business-modal.html
+++ b/business-modal.html
@@ -1,5 +1,6 @@
 <div class="modal-overlay" id="business-modal">
 <div class="ops-modal">
+  <button class="modal-x" data-close aria-label="Close">&times;</button>
   <div class="modal-header">
     <h3 data-en="Business Operations" data-es="Operaciones de Negocio">Business Operations</h3>
   </div>
@@ -32,10 +33,5 @@
     <a href="business.html" class="modal-btn">Learn More</a>
     <button class="modal-btn" onclick="openChatbot()">Ask Chattia</button>
   </div>
-</div>
-<div class="modal-actions">
-  <button class="modal-btn cta" onclick="openModal('contact')">Contact Us</button>
-  <button class="modal-btn primary" onclick="openModal('join-modal')">Join Us</button>
-  <a href="business.html" class="modal-btn">Learn More</a>
-  <button class="modal-btn" onclick="openChatbot()">Ask Chattia</button>
+  </div>
 </div>
