--- a/itsupport-modal.html
+++ b/itsupport-modal.html
@@ -1,5 +1,6 @@
 <div class="modal-overlay" id="itsupport-modal">
 <div class="ops-modal">
+  <button class="modal-x" data-close aria-label="Close">&times;</button>
   <div class="modal-header">
     <h3 data-en="IT Support" data-es="Soporte de TI">IT Support</h3>
   </div>
