--- a/contactcenter-modal.html
+++ b/contactcenter-modal.html
@@ -1,5 +1,6 @@
 <div class="modal-overlay" id="contactcenter-modal">
 <div class="ops-modal">
+  <button class="modal-x" data-close aria-label="Close">&times;</button>
   <div class="modal-header">
     <h3 data-en="Contact Center" data-es="Centro de Contacto">Contact Center</h3>
   </div>
