--- a/professionals-modal.html
+++ b/professionals-modal.html
@@ -1,5 +1,6 @@
 <div class="modal-overlay" id="professionals-modal">
 <div class="ops-modal">
+  <button class="modal-x" data-close aria-label="Close">&times;</button>
   <div class="modal-header">
     <h3 data-en="Professionals" data-es="Profesionales">Professionals</h3>
   </div>
