--- a/index.html
+++ b/index.html
@@ -6,21 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="OPS Online Support structure prototype and navigation">
   <meta name="robots" content="index, follow">
-<<<<<<< HEAD:pages/index.html
+    <!-- Font Awesome -->
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' unsafe-inline; style-src 'self' unsafe-inline;">
   <link rel="stylesheet" href="../css/global.css">
   <link rel="stylesheet" href="../css/fabs.css">
   <link rel="stylesheet" href="../css/bot.css">
-  <!-- Font Awesome Pro 6 -->
-  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v6.0.0-beta1/css/all.css">
-=======
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' unsafe-inline; style-src 'self' unsafe-inline https://cdnjs.cloudflare.com https://fonts.googleapis.com; style-src-elem 'self' unsafe-inline https://cdnjs.cloudflare.com https://fonts.googleapis.com; img-src 'self' https://via.placeholder.com; media-src 'self' https://www.w3schools.com;">
-  <link rel="stylesheet" href="global.css">
-  <link rel="stylesheet" href="fabs.css">
-  <link rel="stylesheet" href="bot.css">
-  <!-- Font Awesome 6.4.2 -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
->>>>>>> main:index.html
 </head>
 <body>
   <!-- NAVIGATION -->
@@ -46,19 +36,10 @@
   <footer>
     © 2025 OPS Online Support
   </footer>
-<<<<<<< HEAD:pages/index.html
   <script type="module" src="../js/connector.js"></script>
   <script type="module" src="../js/central.js"></script>
   <script type="module" src="../js/main.js"></script>
   <script type="module" src="../js/fabmain.js"></script>
   <script type="module" src="../js/bot.js"></script>
-=======
-  <script type="module" src="app-data.js"></script>
-  <script type="module" src="connector.js"></script>
-  <script type="module" src="central.js"></script>
-  <script type="module" src="main.js"></script>
-  <script type="module" src="fabmain.js"></script>
-  <script type="module" src="bot.js"></script>
->>>>>>> main:index.html
 </body>
 </html>
