--- a/pages/professionals.html
+++ b/pages/professionals.html
@@ -6,11 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="OPS professionals network and services">
   <meta name="robots" content="index, follow">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' unsafe-inline; style-src 'self' unsafe-inline;">
   <link rel="stylesheet" href="../css/global.css">
   <link rel="stylesheet" href="../css/fabs.css">
   <link rel="stylesheet" href="../css/bot.css">
-  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v6.0.0-beta1/css/all.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta1/css/all.min.css">
 </head>
 <body>
   <nav class="ops-nav">
@@ -45,8 +44,15 @@
             Your browser does not support the video tag.
         </video>
     </div>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam nibh. Mauris ac mauris sed pede pellentesque fermentum. Maecenas adipiscing ante non diam.
+       <p>
+  	Content Here
+ 	 Content Here
+ 	 Content Here
+ 	 Content Here
+ 	 Content Here
+ 	 Content Here
+ 	 Content Here
+ 	 Content Here
     </p>
     <div class="modal-actions" style="margin-top:2.2em;">
       <button role="button" class="modal-btn cta" onclick="openModal('contact', true)">Contact Us</button>
