--- a/pages/itsupport.html
+++ b/pages/itsupport.html
@@ -9,6 +9,7 @@
    <link rel="stylesheet" href="../css/global.css">
   <link rel="stylesheet" href="../css/fabs.css">
   <link rel="stylesheet" href="../css/bot.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta1/css/all.min.css">
 </head>
 <body>
   <nav class="ops-nav">
