--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <header class="ops-nav">
         <a href="#" class="ops-logo">OPS</a>
         <nav class="nav-links">
+            <a href="index.html" class="nav-link">Home</a>
             <a href="pages/business.html">Business Operations</a>
             <a href="pages/contactcenter.html">Contact Center</a>
             <a href="pages/itsupport.html">IT Support</a>
+            <a href="professionals.html" class="nav-link">Professionals</a>
         </nav>
         <div class="toggles">
             <button class="toggle-btn" id="lang-toggle">ES</button>
