--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="pages/business.html">Business Operations</a>
             <a href="pages/contactcenter.html">Contact Center</a>
             <a href="pages/itsupport.html">IT Support</a>
-            <a href="professionals.html" class="nav-link">Professionals</a>
+            <a href="professionals.html">Professionals</a>
         </nav>
         <div class="toggles">
             <button class="toggle-btn" id="lang-toggle">ES</button>
