--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <header class="ops-nav">
         <a href="#" class="ops-logo">OPS</a>
         <nav class="nav-links">
-            <a href="index.html" class="nav-link">Home</a>
-            <a href="pages/business.html">Business Operations</a>
-            <a href="pages/contactcenter.html">Contact Center</a>
-            <a href="pages/itsupport.html">IT Support</a>
-            <a href="professionals.html">Professionals</a>
+      <a href="index.html" class="nav-link">Home</a>
+      <a href="business.html" class="nav-link">Business Operations</a>
+      <a href="contactcenter.html" class="nav-link">Contact Center</a>
+      <a href="itsupport.html" class="nav-link">IT Support</a>
+      <a href="professionals.html" class="nav-link">Professionals</a>
         </nav>
         <div class="toggles">
             <button class="toggle-btn" id="lang-toggle">ES</button>
