--- a/pages/itsupport.html
+++ b/pages/itsupport.html
@@ -15,7 +15,7 @@
   <nav class="ops-nav">
     <span class="ops-logo">OPS</span>
     <div class="nav-links">
-      <a href="index.html" class="nav-link">Home</a>
+      <a href="/index.html" class="nav-link">Home</a>
       <a href="business.html" class="nav-link">Business Operations</a>
       <a href="contactcenter.html" class="nav-link">Contact Center</a>
       <a href="professionals.html" class="nav-link">Professionals</a>
