--- a/pages/professionals.html
+++ b/pages/professionals.html
@@ -56,11 +56,12 @@
  	 Content Here
     </p>
     <div class="modal-actions" style="margin-top:2.2em;">
-      <a href="contact.html" class="modal-btn cta">Contact Us</a>
-      <a href="join.html" class="modal-btn">Join Us</a>
+      <a href="#" class="modal-btn cta" onclick="openContactModal();return false;">Contact Us</a>
+      <a href="#" class="modal-btn" onclick="openJoinModal();return false;">Join Us</a>
     </div>
   </main>
   <div id="fab-root"></div>
+  <div id="modal-root"></div>
   <footer>© 2025 OPS Online Support</footer>
   <script type="module" src="../js/main.js"></script>
   <script type="module" src="../js/connector.js"></script>
