Add required scripts to fabs snippet

--- a/fabs.html
+++ b/fabs.html
@@ -128,3 +128,9 @@
     <i class="fas fa-user-plus"></i>
   </button>
 </div>
+
+<script type="module" src="js/main.js"></script>
+<script type="module" src="js/connector.js"></script>
+<script type="module" src="js/central.js"></script>
+<script type="module" src="js/fabmain.js"></script>
+<script type="module" src="js/bot.js"></script>
