Fix mobile language selector and modal root

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
         <div class="toggles">
             <button class="toggle-btn" id="lang-toggle">ES</button>
-            <button class="toggle-btn">Dark</button>
+            <button class="toggle-btn" id="theme-toggle">Dark</button>
         </div>
     </header>
 
@@ -55,6 +55,7 @@
     </footer>
 
     <script type="module" src="js/main.js"></script>
+    <script type="module" src="js/central.js"></script>
     <script type="module" src="js/fabmain.js"></script>
     <script type="module" src="js/bot.js"></script>
 </body>
